objects/Ecom_Coupon_Category__c.object
<CustomObject>
    <fields>
        <fullName>Ecom_Category_Cart_Amount__c</fullName>
        <label>Category Cart Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ecom_Category_Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ecom_Coupon_Category_Type__c</fullName>
        <label>Coupon Category Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inclusion</fullName>
                </value>
                <value>
                    <fullName>Exclusion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ecom_Coupon__c</fullName>
        <label>Ecom Coupon</label>
        <referenceTo>Ecom_Coupon__c</referenceTo>
        <relationshipLabel>Ecom Coupon Categories</relationshipLabel>
        <relationshipName>Ecom_Coupon_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ecom_Rule_Type__c</fullName>
        <label>Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>BOGO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ecom_Source_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Category</label>
        <referenceTo>ccrz__E_Category__c</referenceTo>
        <relationshipLabel>Ecom Coupon Categories</relationshipLabel>
        <relationshipName>Ecom_Coupon_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ecom_Source_Quantity__c</fullName>
        <label>Source Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ecom_Target_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Category</label>
        <referenceTo>ccrz__E_Category__c</referenceTo>
        <relationshipLabel>Ecom Coupon Categories (Target Category)</relationshipLabel>
        <relationshipName>Ecom_Coupon_Categories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ecom_Target_Quantity__c</fullName>
        <label>Target Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Ecom Coupon Category</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ECAT-{000000}</displayFormat>
        <label>Coupon Category Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ecom Coupon Categories</pluralLabel>
    <recordTypes>
        <fullName>Default_Type</fullName>
        <active>true</active>
        <description>Default Record Type</description>
        <label>Default Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>